@@ -65,7 +65,7 @@ Join the specified IPv4 or IPv6 multicast group for listening.
 Enable packet repeater. Send all incoming packets to another \fIhost\fR and \fIport\fR.
 \fIhost\fR is either a valid IPv4/IPv6 address, or a valid symbolic hostname, which resolves to 
 a IPv6 or IPv4 address. \fIport\fR may be omitted and defaults to port 9995. Note: Due to IPv4/IPv6
-accepted addresses the port separator is '/'.
+accepted addresses the port separator is '/'. Up to 8 repeaters my be defined.
 .TP 3
 .B -I \fIIdentString ( capital letter i )
 Specifies an ident string, which describes the source e.g. the 
