@@ -1,5 +1,6 @@
 2018-06-24
 - Fix bookkeeper type - use key_t
+- Add multiple packet repeaters to nfcapd/sfcapd. Up to 8 repeaters (-R) can be defined.
 
 2018-05-06
 - New bookkeeper hash broke NfSen. Fixed. ported back to release 1.6.17
